# agentic_browser

./: .gitignore  AGENT_PROTOCOL.md  LICENSE  README.md  humanbrowse.yaml.example  pyproject.toml  requirements.txt
src/humanbrowse/: __init__.py  artifacts.py  browser_manager.py  cdp_endpoints.py  config.py  extractors.py  log.py  models.py  policy.py  service.py  steps.py
src/webctl/: __init__.py  cli.py
tests/: test_extractors.py  test_models.py  test_policy.py  test_smoke_optional.py
tests/fixtures/: sample.html
ui/: app.js  index.html  run.html  style.css
windows/: Start-HumanChrome.ps1
